[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/PickupItem04.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Item4" type="Node2D"]
script = ExtResource( 2 )

[node name="TestPickup" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PickupArea4" type="Area2D" parent="TestPickup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestPickup/PickupArea4"]
shape = SubResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="TestPickup/PickupArea4" to="." method="_on_PickupArea4_body_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
